--- a/src/app/components/history/component.history.css
+++ b/src/app/components/history/component.history.css
@@ -181,3 +181,12 @@
 .historyGroupLineMiddle button {
     background-color: lightgray;
 }
+
+.bottomBorder {
+    border-bottom: 1px solid gray;
+}
+
+::-webkit-scrollbar {
+    width: 3px;
+    height: 10px;
+}
